<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">بریم</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_register">ثبت نام</string>
    <string name="activity_login">ورود</string>
    <string name="places">مکان‌ها</string>
    <string name="chats">گفتگوها</string>
    <string name="berims">بریم‌ها</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- Place Activity: -->
    <string name="place_photos">تصاویر</string>
    <string name="place_maps">نقشه</string>
    <string name="place_x">چی بذاریم؟</string>
    <string name="place_share">شر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_scroll">TestScrollActivity</string>
    <string name="register">ورود</string>
    <string name="enter_phone">تلفن خود را وارد کنید</string>
    <string name="nickname">نام کاربری</string>
    <string name="button_register">ثبت نام</string>
    <string name="button_login">ورود</string>
    <string name="passHint">رمز عبور</string>
    <string name="activate">فعال‌سازی</string>
    <string name="activate_code">کد فعال‌سازی</string>

    <!-- errors -->
    <string name="connection_error">اتصال به سرور برقرار نیست.</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_search_user">SearchUserActivity</string>

    <string name="search">جستجو</string>

    <string name="please_wait">شکیبا باشید</string>
    <string name="please_wait_more">در حال اتصال به سرور...</string>
    <string name="fill_all_inputs">لطفا همه ورودی‌ها را وارد کنید.</string>

    <string name="an_error_occurred">یه جایی یه مشکلی هست.</string>
    <string name="an_error_occurred_try_again">یه جایی یه مشکلی هست. دوباره تلاش کنید.</string>

    <string name="welcome">خوش آمدید :)</string>

    <string name="select_file">انتخاب فایل</string>
    <string name="photo_from_camera">عکس (دوربین)</string>
    <string name="video_from_camera">فیلم (دوربین)</string>
    <string name="photo">عکس</string>
    <string name="video">فیلم</string>
    <string name="file">فایل</string>
    <string name="cancel">لغو</string>

    <string name="review_hint">یک نظر وارد کنید!</string>

    <string name="cant_logout">خطایی پیش آمده، لطفا دوباره تلاش کنید.</string>
    <string name="change_nickname">نامتان را تغییر دهید</string>
    <string name="ok">قبول</string>
    <string name="no_nickname">یک نام برای خود وارد کنید</string>
    <string name="profile_updated">تغییرات ثبت شد</string>
    <string name="unsuccessful">ببخشید! مشکلی پیش آمده. تغییرات شما ذخیره نشد</string>

    <string name="buy_vip">خرید اکانت ویژه</string>
    <string name="buy_vip_description">با خرید اکانت یک ماهه ویژی میتوانید پیام‌هایی ارسال کنید که
        در گوشی شما رمز شده و برای سرور ارسال می‌شود و نسخه رمز شده به گوشی مخاطب شما خواهد رسید و
        پیام‌های شما قابل خواندن نخواهد بود، حتی با دسترسی فیزیکی به سرور های بریم :)
    </string>

    <string name="title_activity_add_place">اضافه کردن مکان</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="place_name">نام مکان</string>
    <string name="place_address">نشانی</string>
    <string name="place_desc">توضیحات</string>
    <string name="submit">ثبت</string>
    <string name="send">ارسال</string>

    <string name="i_add_user">من %s را به گروه اضافه کردم.</string>
    <string name="successful">با موفقیت انجام شد!</string>
    <string name="Berim">شبکه اجتماعی بریم</string>
    <string name="creatoes">ساخته‌شده توسط:</string>
    <string name="amir">امیر پوران‌بن‌ویسه</string>
    <string name="masoud">مسعود هاشمیان</string>
    <string name="saeed">سعید الوندکوهی</string>
    <string name="amin">محمدامین ملاحسینی</string>
    <string name="behrouz">بهروز منصوری</string>
    <string name="berim_description">«بریم» هماهنگی یک تفریح دوستانه رو راحت‌تر می‌کنه. انتخاب مکان و زمان،  و بقیه ملزومات تفریح و در نهایت به اشتراک‌گذاری خاطره‌ها و عکس‌ها از طریق «بریم» به راحتی انجام میشه.</string>
    <string name="upload_photo">آپلود عکس</string>

    <string name="new_message">پیام جدید</string>
    <string name="you_have_new_message">چند پیام جدید وجود دارد</string>
</resources>
