<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ir.ac.ut.berim.LoginActivity"
        android:background="#99bbff"
        android:orientation="vertical">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_number"
            android:singleLine="true"
            android:hint="@string/enter_phone"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/passHint"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            android:background="#99bbff"
            android:padding="5dp"
            android:textSize="20dp"
            android:text="@string/button_login"
            android:contextClickable="false"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_open_register"
            android:background="#99bbff"
            android:padding="5dp"
            android:textSize="20dp"
            android:text="@string/button_register"
            android:contextClickable="false"
            android:layout_centerHorizontal="true"/>
</LinearLayout>
