<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/place_default"
                android:layout_margin="30dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_name"
                android:hint="@string/place_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_address"
                android:hint="@string/place_address"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/place_desc"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/submit"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>